<resources>
    <string name="app_name">LumiereTV</string>
    <string name="menu_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_tv">TV</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_language">Language</string>
    <string name="menu_genre">Genre</string>
</resources>