<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <androidx.leanback.widget.BrowseFrameLayout
        android:id="@+id/blfNavBar"
        android:layout_width="50dp"
        android:background="#000000"
        android:nextFocusLeft="@id/container"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:drawablePadding="20dp"
                android:layout_marginStart="12dp"
                android:drawableStart="@drawable/ic_search"
                android:text="@string/menu_search"
                android:background="@drawable/selector_menu"
                android:textColor="@drawable/text_selector_white_grey"
                />

            <TextView
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:focusable="true"
                android:text="@string/menu_home"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:drawableLeft="@drawable/ic_home"
                android:background="@drawable/selector_menu"
                android:textColor="@drawable/text_selector_white_grey"
                />

            <TextView
                android:id="@+id/btn_movies"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:focusable="true"
                android:text="@string/menu_movies"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:drawableLeft="@drawable/ic_movies"
                android:background="@drawable/selector_menu"
                android:textColor="@drawable/text_selector_white_grey"
                />

            <TextView
                android:id="@+id/btn_tv"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:focusable="true"
                android:text="@string/menu_tv"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:drawableLeft="@drawable/ic_tv"
                android:background="@drawable/selector_menu"
                android:textColor="@drawable/text_selector_white_grey"
                />

            <TextView
                android:id="@+id/btn_sports"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:focusable="true"
                android:text="@string/menu_sports"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:drawableLeft="@drawable/ic_sports"
                android:background="@drawable/selector_menu"
                android:textColor="@drawable/text_selector_white_grey"
                />

            <TextView
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:focusable="true"
                android:text="@string/menu_settings"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginTop="45dp"
                android:drawableLeft="@drawable/ic_settings"
                android:background="@drawable/selector_menu"
                android:textColor="@drawable/text_selector_white_grey"
                />

            <TextView
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:focusable="true"
                android:text="@string/menu_language"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:drawableLeft="@drawable/ic_language"
                android:background="@drawable/selector_menu"
                android:textColor="@drawable/text_selector_white_grey"
                />

            <TextView
                android:id="@+id/btn_genre"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/menu_genre"
                android:drawablePadding="20dp"
                android:layout_marginStart="12dp"
                android:drawableLeft="@drawable/ic_genre"
                android:background="@drawable/selector_menu"
                android:textColor="@drawable/text_selector_white_grey"
                />


        </LinearLayout>

    </androidx.leanback.widget.BrowseFrameLayout>

</FrameLayout>